// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeTableSelectFormControlOptions should normalize complex table select form control options 1`] = `
{
  "backend": {
    "kind": "nestjs",
    "module": null,
    "prefix": null,
    "project": null,
    "serverId": null,
  },
  "columnList": [
    {
      "hasFilter": true,
      "isArray": false,
      "isOptional": false,
      "kind": "default",
      "memberList": [],
      "name": "uuid",
      "propertyPath": "uuid",
      "source": null,
      "title": "Uuid",
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
    {
      "hasFilter": true,
      "isArray": false,
      "isOptional": false,
      "kind": "default",
      "memberList": [],
      "name": "name",
      "propertyPath": "name",
      "source": null,
      "title": "Name",
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  ],
  "componentName": null,
  "context": null,
  "controllerName": "test-form",
  "dataSource": null,
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [
      {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": "@rxap/ngx-material-table-select",
        "name": "rxapTableSelectControl",
        "namedImport": "TableSelectControlModule",
        "namespaceImport": null,
      },
    ],
    "hasClearButton": true,
    "label": null,
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "test-form",
  "handlebars": [Function],
  "identifier": {
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "uuid",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
    "source": null,
  },
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/ngx-material-table-select",
      "name": "TableSelectControlModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "table-select",
  "label": null,
  "memberList": [],
  "name": "userSelect",
  "nestModule": null,
  "openApi": null,
  "options": null,
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [
    {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "name",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
    {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "uuid",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  ],
  "replace": false,
  "resolver": null,
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "table-select-form-control.hbs",
  "title": null,
  "toDisplay": {
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "name",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  },
  "toValue": {
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "uuid",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  },
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "string",
    "namedImport": null,
    "namespaceImport": null,
  },
  "upstream": {
    "isService": false,
    "kind": "open-api",
    "mapper": null,
    "operationId": "user-controller-getAll",
    "scope": null,
  },
  "validatorList": [],
}
`;

exports[`NormalizeTableSelectFormControlOptions should normalize minimal table select form control options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "columnList": [
    {
      "hasFilter": false,
      "isArray": false,
      "isOptional": false,
      "kind": "default",
      "memberList": [],
      "name": "col1",
      "propertyPath": "col1",
      "source": null,
      "title": "Col1",
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "unknown",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  ],
  "componentName": null,
  "context": null,
  "controllerName": "test-form",
  "dataSource": null,
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [
      {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": "@rxap/ngx-material-table-select",
        "name": "rxapTableSelectControl",
        "namedImport": "TableSelectControlModule",
        "namespaceImport": null,
      },
    ],
    "hasClearButton": true,
    "label": null,
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "test-form",
  "handlebars": [Function],
  "identifier": {
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "col1",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "unknown",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
    "source": null,
  },
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/ngx-material-table-select",
      "name": "TableSelectControlModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "table-select",
  "label": null,
  "memberList": [],
  "name": "testAts",
  "nestModule": null,
  "openApi": null,
  "options": null,
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [
    {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "col1",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  ],
  "replace": false,
  "resolver": null,
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "table-select-form-control.hbs",
  "title": null,
  "toDisplay": {
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "col1",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  },
  "toValue": {
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "col1",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "unknown",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  },
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "unknown",
    "namedImport": null,
    "namespaceImport": null,
  },
  "upstream": null,
  "validatorList": [],
}
`;
